Fix mission statement's css to prevent overlap with footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,6 +52,10 @@
   .card-header {
     min-height: 106px;
   }
+
+  .intro-header, .intro-body {
+    min-height: 0;
+  }
 }
 
 @media screen and (min-width: 761px) and (max-width: 991px) {
